Fix REST naming
